settings: Fix labels using full width of the modal.
Currently, the labels are using the full width of the modal, which results
in a clickable area that is too large. This commit fixes the issue by
setting the width of the labels to just fit its content.

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1626,6 +1626,7 @@ $option_title_width: 180px;
 
 .settings-field-label {
     margin-bottom: var(--margin-bottom-field-description);
+    width: fit-content;
 }
 
 .settings-profile-user-field-hint {
